project(skia)

list(APPEND SOURCES
    c/sk_effects.cpp
    c/sk_surface.cpp
    c/sk_paint.cpp
    c/sk_imageinfo.cpp
    core/SkAAClip.cpp
    core/SkAlphaRuns.cpp
    core/SkAnalyticEdge.cpp
    core/SkAnnotation.cpp
    core/SkArenaAlloc.cpp
    core/SkATrace.cpp
    core/SkAutoPixmapStorage.cpp
    core/SkBBHFactory.cpp
    core/SkBigPicture.cpp
    core/SkBitmapCache.cpp
    core/SkBitmap.cpp
    core/SkBitmapDevice.cpp
    core/SkBitmapProcState.cpp
    core/SkBitmapProcState_matrixProcs.cpp
    core/SkBlendMode.cpp
    core/SkBlitRow_D32.cpp
    core/SkBlitter_A8.cpp
    core/SkBlitter_ARGB32.cpp
    core/SkBlitter.cpp
    core/SkBlitter_RGB565.cpp
    core/SkBlitter_Sprite.cpp
    core/SkBlurMask.cpp
    core/SkBlurMF.cpp
    core/SkBuffer.cpp
    core/SkCachedData.cpp
    core/SkCanvas.cpp
    core/SkCanvasPriv.cpp
    core/SkClipStack.cpp
    core/SkClipStackDevice.cpp
    core/SkColor.cpp
    core/SkColorFilter.cpp
    core/SkColorFilter_Matrix.cpp
    core/SkColorSpace.cpp
    core/SkColorSpaceXformSteps.cpp
    core/SkCompressedDataUtils.cpp
    core/SkContourMeasure.cpp
    core/SkConvertPixels.cpp
    core/SkCpu.cpp
    core/SkCubicClipper.cpp
    core/SkCubicMap.cpp
    core/SkData.cpp
    core/SkDataTable.cpp
    core/SkDebug.cpp
    core/SkDeferredDisplayList.cpp
    core/SkDeferredDisplayListRecorder.cpp
    core/SkDeque.cpp
    core/SkDescriptor.cpp
    core/SkDevice.cpp
    core/SkDistanceFieldGen.cpp
    core/SkDocument.cpp
    core/SkDrawable.cpp
    core/SkDraw_atlas.cpp
    core/SkDraw.cpp
    core/SkDrawLooper.cpp
    core/SkDrawShadowInfo.cpp
    core/SkDraw_text.cpp
    core/SkDraw_vertices.cpp
    core/SkEdgeBuilder.cpp
    core/SkEdgeClipper.cpp
    core/SkEdge.cpp
    core/SkExecutor.cpp
    core/SkFlattenable.cpp
    core/SkFont.cpp
    core/SkFontDescriptor.cpp
    core/SkFontMgr.cpp
    core/SkFont_serial.cpp
    core/SkFontStream.cpp
    core/SkGaussFilter.cpp
    core/SkGeometry.cpp
    core/SkGlobalInitialization_core.cpp
    core/SkGlyphBuffer.cpp
    core/SkGlyph.cpp
    core/SkGlyphRun.cpp
    core/SkGlyphRunPainter.cpp
    core/SkGpuBlurUtils.cpp
    core/SkGraphics.cpp
    core/SkHalf.cpp
    core/SkICC.cpp
    core/SkIDChangeListener.cpp
    core/SkImageFilterCache.cpp
    core/SkImageFilter.cpp
    core/SkImageFilterTypes.cpp
    core/SkImageGenerator.cpp
    core/SkImageInfo.cpp
    core/SkLatticeIter.cpp
    core/SkLineClipper.cpp
    core/SkLocalMatrixImageFilter.cpp
    core/SkM44.cpp
    core/SkMalloc.cpp
    core/SkMallocPixelRef.cpp
    core/SkMarkerStack.cpp
    core/SkMaskBlurFilter.cpp
    core/SkMaskCache.cpp
    core/SkMask.cpp
    core/SkMaskFilter.cpp
    core/SkMaskGamma.cpp
    core/SkMath.cpp
    core/SkMatrix44.cpp
    core/SkMatrix.cpp
    core/SkMatrixImageFilter.cpp
    core/SkMD5.cpp
    core/SkMiniRecorder.cpp
    core/SkMipmapAccessor.cpp
    core/SkMipmap.cpp
    core/SkModeColorFilter.cpp
    core/SkOpts.cpp
    core/SkOpts_erms.cpp
    core/SkOverdrawCanvas.cpp
    core/SkPaint.cpp
    core/SkPaintPriv.cpp
    core/SkPathBuilder.cpp
    core/SkPath.cpp
    core/SkPathEffect.cpp
    core/SkPathMeasure.cpp
    core/SkPathRef.cpp
    core/SkPath_serial.cpp
    core/SkPicture.cpp
    core/SkPictureData.cpp
    core/SkPictureFlat.cpp
    core/SkPictureImageGenerator.cpp
    core/SkPicturePlayback.cpp
    core/SkPictureRecord.cpp
    core/SkPictureRecorder.cpp
    core/SkPixelRef.cpp
    core/SkPixmap.cpp
    core/SkPoint3.cpp
    core/SkPoint.cpp
    core/SkPromiseImageTexture.cpp
    core/SkPtrRecorder.cpp
    core/SkQuadClipper.cpp
    core/SkRasterClip.cpp
    core/SkRasterPipelineBlitter.cpp
    core/SkRasterPipeline.cpp
    core/SkReadBuffer.cpp
    core/SkRecord.cpp
    core/SkRecordDraw.cpp
    core/SkRecordedDrawable.cpp
    core/SkRecorder.cpp
    core/SkRecordOpts.cpp
    core/SkRecords.cpp
    core/SkRect.cpp
    core/SkRegion.cpp
    core/SkRegion_path.cpp
    core/SkRemoteGlyphCache.cpp
    core/SkResourceCache.cpp
    core/SkRRect.cpp
    core/SkRTree.cpp
    core/SkRuntimeEffect.cpp
    core/SkScalar.cpp
    core/SkScalerCache.cpp
    core/SkScalerContext.cpp
    core/SkScan_AAAPath.cpp
    core/SkScan_Antihair.cpp
    core/SkScan_AntiPath.cpp
    core/SkScan.cpp
    core/SkScan_Hairline.cpp
    core/SkScan_Path.cpp
    core/SkSemaphore.cpp
    core/SkSharedMutex.cpp
    core/SkSpecialImage.cpp
    core/SkSpecialSurface.cpp
    core/SkSpinlock.cpp
    core/SkSpriteBlitter_ARGB32.cpp
    core/SkSpriteBlitter_RGB565.cpp
    core/SkStream.cpp
    core/SkStrikeCache.cpp
    core/SkStrikeForGPU.cpp
    core/SkStrikeSpec.cpp
    core/SkString.cpp
    core/SkStringUtils.cpp
    core/SkStroke.cpp
    core/SkStrokeRec.cpp
    core/SkStrokerPriv.cpp
    core/SkSurfaceCharacterization.cpp
    core/SkSwizzle.cpp
    core/SkTaskGroup.cpp
    core/SkTextBlob.cpp
    core/SkTextBlobTrace.cpp
    core/SkThreadID.cpp
    core/SkTime.cpp
    core/SkTSearch.cpp
    core/SkTypefaceCache.cpp
    core/SkTypeface.cpp
    core/SkTypeface_remote.cpp
    core/SkUnPreMultiply.cpp
    core/SkUtilsArm.cpp
    core/SkUtils.cpp
    core/SkVertices.cpp
    core/SkVertState.cpp
    core/SkVMBlitter.cpp
    core/SkVM.cpp
    core/SkWriteBuffer.cpp
    core/SkWriter32.cpp
    core/SkXfermode.cpp
    core/SkXfermodeInterpretation.cpp
    core/SkYUVAInfo.cpp
    core/SkYUVAPixmaps.cpp
    core/SkYUVMath.cpp
    core/SkYUVPlanesCache.cpp
)

if(SKIA_HAVE_CODEC)
    list(APPEND SOURCES
        codec/SkAndroidCodecAdapter.cpp
        codec/SkAndroidCodec.cpp
        codec/SkBmpBaseCodec.cpp
        codec/SkBmpCodec.cpp
        codec/SkBmpMaskCodec.cpp
        codec/SkBmpRLECodec.cpp
        codec/SkBmpStandardCodec.cpp
        codec/SkCodec.cpp
        codec/SkCodecImageGenerator.cpp
        codec/SkColorTable.cpp
        codec/SkEncodedInfo.cpp
        codec/SkHeifCodec.cpp
        codec/SkIcoCodec.cpp
        codec/SkJpegUtility.cpp
        codec/SkMasks.cpp
        codec/SkMaskSwizzler.cpp
        codec/SkParseEncodedOrigin.cpp
        codec/SkRawCodec.cpp
        codec/SkSampledCodec.cpp
        codec/SkSampler.cpp
        codec/SkStreamBuffer.cpp
        codec/SkSwizzler.cpp
        codec/SkWbmpCodec.cpp
    )
    include_directories(
        ${CMAKE_SOURCE_DIR}/third_party/externals/dng_sdk/source

        ${CMAKE_SOURCE_DIR}/third_party/externals/piex
    )
    if(SKIA_HAVE_CODEC_JPEG)
        list(APPEND SOURCES
            codec/SkJpegCodec.cpp
            codec/SkJpegDecoderMgr.cpp
        )
        include_directories(
            ${CMAKE_SOURCE_DIR}/third_party/externals/libjpeg-turbo
        )
    endif()
    if(SKIA_HAVE_CODEC_PNG)
        list(APPEND SOURCES
            codec/SkPngCodec.cpp
        )
        include_directories(
            ${CMAKE_SOURCE_DIR}/third_party/externals/libpng
        )
    endif()
    if(SKIA_HAVE_CODEC_WEBP)
        list(APPEND SOURCES
            codec/SkWebpCodec.cpp
        )
        include_directories(
            ${CMAKE_SOURCE_DIR}/third_party/externals/libwebp/src
            ${CMAKE_SOURCE_DIR}/third_party/externals/libwebp
        )
    endif()
    if(SKIA_HAVE_CODEC_WUFFS)
        list(APPEND SOURCES
            codec/SkWuffsCodec.cpp
        )
        include_directories(
            ${CMAKE_SOURCE_DIR}/third_party/externals/wuffs/release/c
        )
    endif()
endif()

if(SKIA_HAVE_EFFECTS)
    list(APPEND SOURCES
        effects/imagefilters/SkAlphaThresholdImageFilter.cpp
        effects/imagefilters/SkArithmeticImageFilter.cpp
        effects/imagefilters/SkBlendImageFilter.cpp
        effects/imagefilters/SkBlurImageFilter.cpp
        effects/imagefilters/SkColorFilterImageFilter.cpp
        effects/imagefilters/SkComposeImageFilter.cpp
        effects/imagefilters/SkDisplacementMapImageFilter.cpp
        effects/imagefilters/SkDropShadowImageFilter.cpp
        effects/imagefilters/SkImageImageFilter.cpp
        effects/imagefilters/SkLightingImageFilter.cpp
        effects/imagefilters/SkMagnifierImageFilter.cpp
        effects/imagefilters/SkMatrixConvolutionImageFilter.cpp
        effects/imagefilters/SkMergeImageFilter.cpp
        effects/imagefilters/SkMorphologyImageFilter.cpp
        effects/imagefilters/SkOffsetImageFilter.cpp
        effects/imagefilters/SkPictureImageFilter.cpp
        effects/imagefilters/SkShaderImageFilter.cpp
        effects/imagefilters/SkTileImageFilter.cpp
        effects/Sk1DPathEffect.cpp
        effects/Sk2DPathEffect.cpp
        effects/SkColorMatrix.cpp
        effects/SkColorMatrixFilter.cpp
        effects/SkCornerPathEffect.cpp
        effects/SkDashPathEffect.cpp
        effects/SkDiscretePathEffect.cpp
        effects/SkEmbossMask.cpp
        effects/SkEmbossMaskFilter.cpp
        effects/SkHighContrastFilter.cpp
        effects/SkLayerDrawLooper.cpp
        effects/SkLumaColorFilter.cpp
        effects/SkOpPathEffect.cpp
        effects/SkOverdrawColorFilter.cpp
        effects/SkShaderMaskFilter.cpp
        effects/SkTableColorFilter.cpp
        effects/SkTableMaskFilter.cpp
        effects/SkTrimPathEffect.cpp
    )
endif()

include_directories(
    ${CMAKE_SOURCE_DIR}/include
    ${CMAKE_SOURCE_DIR}
    ${CMAKE_BINARY_DIR}/include
)

add_library(${PROJECT_NAME} ${SOURCES})

target_link_directories(${PROJECT_NAME}
    PRIVATE ${CMAKE_BINARY_DIR}/lib
)

if(SKIA_HAVE_CODEC)
    if(SKIA_HAVE_CODEC_PNG)
        target_link_libraries(${PROJECT_NAME}
            -lpng16
        )
    endif()
    if(SKIA_HAVE_CODEC_WEBP)
        target_link_libraries(${PROJECT_NAME}
            -lwebp
        )
    endif()
endif()
